--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_notarios.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_notarios.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1ef4d0a4-db8a-4cc6-81ad-b4ec81f2231d">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="172"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="FECHAINICIO" class="java.lang.String"/>
 	<parameter name="FECHAFIN" class="java.lang.String">
@@ -54,170 +54,170 @@ inner join puesto p on ep.codigopuesto=p.codigopuesto where p.nombrepuesto like 
 	<pageHeader>
 		<band height="158" splitType="Stretch">
 			<textField>
-				<reportElement uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49" x="632" y="117" width="80" height="17"/>
+				<reportElement x="632" y="117" width="80" height="17" uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="d63d0eb3-1543-473d-a0be-53844c71f01f" x="712" y="117" width="40" height="17"/>
+				<reportElement x="712" y="117" width="40" height="17" uuid="d63d0eb3-1543-473d-a0be-53844c71f01f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce" x="368" y="97" width="88" height="17"/>
+				<reportElement x="368" y="97" width="88" height="17" uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Reporte de Notarios]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73" x="251" y="124" width="42" height="17"/>
+				<reportElement x="251" y="124" width="42" height="17" uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="490e45c9-0353-42d5-8b19-b6879e26d467" x="439" y="124" width="33" height="17"/>
+				<reportElement x="439" y="124" width="33" height="17" uuid="490e45c9-0353-42d5-8b19-b6879e26d467"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="8ab75876-80ee-4d3e-8042-58f322695998" x="472" y="124" width="100" height="17"/>
+				<reportElement x="472" y="124" width="100" height="17" uuid="8ab75876-80ee-4d3e-8042-58f322695998"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="defd1f57-b9e1-4411-9a1b-4f605b930187" x="699" y="100" width="100" height="17"/>
+				<reportElement x="699" y="100" width="100" height="17" uuid="defd1f57-b9e1-4411-9a1b-4f605b930187"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="444789e4-36d6-48a7-aa94-5a0d710aad34" x="293" y="124" width="100" height="17"/>
+				<reportElement x="293" y="124" width="100" height="17" uuid="444789e4-36d6-48a7-aa94-5a0d710aad34"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="a2e8a51e-4d92-40ba-bfad-4c995afdc11b" x="664" y="134" width="48" height="17"/>
+				<reportElement x="664" y="134" width="48" height="17" uuid="a2e8a51e-4d92-40ba-bfad-4c995afdc11b"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="e4783e60-ae82-46e0-8b1e-8c69bb429682" x="659" y="99" width="40" height="17"/>
+				<reportElement x="659" y="99" width="40" height="17" uuid="e4783e60-ae82-46e0-8b1e-8c69bb429682"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="0b4f6af4-5533-4f80-b366-8737d6b84dc1" x="712" y="135" width="85" height="17"/>
+				<reportElement x="712" y="135" width="85" height="17" uuid="0b4f6af4-5533-4f80-b366-8737d6b84dc1"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="8c445ee3-32d7-4acf-ba4a-e0b541eb7aa8" x="17" y="124" width="100" height="17"/>
+				<reportElement x="17" y="124" width="100" height="17" uuid="8c445ee3-32d7-4acf-ba4a-e0b541eb7aa8"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_nota]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="a0dbe5a9-0228-4d87-aec6-d782086fdf42" x="299" y="21" width="230" height="17"/>
+				<reportElement x="299" y="21" width="230" height="17" uuid="a0dbe5a9-0228-4d87-aec6-d782086fdf42"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[MINISTERIO DE JUSTICA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="db6f5eb3-86ed-4034-ba10-eab3fd2e2b42" x="319" y="11" width="186" height="17"/>
+				<reportElement x="319" y="11" width="186" height="17" uuid="db6f5eb3-86ed-4034-ba10-eab3fd2e2b42"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="4029d439-49b0-4518-9158-407c5b425ee8" x="388" y="33" width="65" height="17"/>
+				<reportElement x="388" y="33" width="65" height="17" uuid="4029d439-49b0-4518-9158-407c5b425ee8"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<image>
-				<reportElement uuid="0a53ebdf-f527-4f3d-a4d9-5ebcd1482402" x="666" y="11" width="105" height="86"/>
+				<reportElement x="666" y="11" width="105" height="86" uuid="0a53ebdf-f527-4f3d-a4d9-5ebcd1482402"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement uuid="00dcc53f-b5c6-4f41-bd93-d625f80b347c" x="17" y="11" width="105" height="86"/>
+				<reportElement x="17" y="11" width="105" height="86" uuid="00dcc53f-b5c6-4f41-bd93-d625f80b347c"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<line>
-				<reportElement uuid="a4a53fd7-b91f-4a21-9480-a9f59fe86551" x="385" y="8" width="1" height="23"/>
+				<reportElement x="385" y="8" width="1" height="23" uuid="a4a53fd7-b91f-4a21-9480-a9f59fe86551"/>
 			</line>
-			<rectangle>
-				<reportElement uuid="92319add-11b7-49e9-be78-0569261939ca" x="2" y="0" width="797" height="23"/>
-			</rectangle>
 		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="23" splitType="Stretch">
+			<rectangle>
+				<reportElement x="0" y="0" width="795" height="19" uuid="92319add-11b7-49e9-be78-0569261939ca"/>
+			</rectangle>
 			<staticText>
-				<reportElement uuid="45933b9f-8ac2-4df1-a559-c0d867795b56" x="2" y="5" width="132" height="17"/>
+				<reportElement x="2" y="5" width="132" height="17" uuid="45933b9f-8ac2-4df1-a559-c0d867795b56"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Codigo de Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="42e93400-ab2e-4d3a-b579-c5c1dba947a6" x="133" y="4" width="244" height="17"/>
+				<reportElement x="133" y="4" width="244" height="17" uuid="42e93400-ab2e-4d3a-b579-c5c1dba947a6"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre de Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="5f6e7b56-d32d-41ee-8c48-3da2659baf94" x="580" y="0" width="178" height="17"/>
+				<reportElement x="580" y="-3" width="178" height="17" uuid="5f6e7b56-d32d-41ee-8c48-3da2659baf94"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha de aprobación]]></text>
 			</staticText>
 			<line>
-				<reportElement uuid="35d22153-ea6a-44ee-b442-c1dbb50b0f6e" x="133" y="0" width="1" height="23"/>
+				<reportElement x="133" y="0" width="1" height="23" uuid="35d22153-ea6a-44ee-b442-c1dbb50b0f6e"/>
 			</line>
 			<line>
-				<reportElement uuid="6e46fac2-9335-4de0-8bbd-fbbcdcfde566" x="472" y="0" width="1" height="23"/>
+				<reportElement x="472" y="0" width="1" height="23" uuid="6e46fac2-9335-4de0-8bbd-fbbcdcfde566"/>
 			</line>
 			<line>
-				<reportElement uuid="f073d423-6412-4a26-93bb-d7eebe577d4b" x="371" y="0" width="1" height="23"/>
+				<reportElement x="371" y="0" width="1" height="23" uuid="f073d423-6412-4a26-93bb-d7eebe577d4b"/>
 			</line>
 			<line>
-				<reportElement uuid="d2121345-6cf8-4e77-a853-397185d67d99" x="575" y="0" width="1" height="23"/>
+				<reportElement x="575" y="0" width="1" height="23" uuid="d2121345-6cf8-4e77-a853-397185d67d99"/>
 			</line>
 			<staticText>
-				<reportElement uuid="21b7cc0e-ae85-424b-aa45-51890478ec10" x="372" y="4" width="100" height="17"/>
+				<reportElement x="372" y="4" width="100" height="17" uuid="21b7cc0e-ae85-424b-aa45-51890478ec10"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Universidad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="fc443ee4-a918-4a7f-b6bc-87fbc2219518" x="472" y="4" width="100" height="17"/>
+				<reportElement x="472" y="4" width="100" height="17" uuid="fc443ee4-a918-4a7f-b6bc-87fbc2219518"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
@@ -228,34 +228,32 @@ inner join puesto p on ep.codigopuesto=p.codigopuesto where p.nombrepuesto like 
 	<detail>
 		<band height="30" splitType="Stretch">
 			<textField>
-				<reportElement uuid="536d7998-9fb0-42ae-92e5-f92c51b2a4d3" x="3" y="0" width="132" height="14"/>
+				<reportElement x="3" y="0" width="132" height="14" uuid="536d7998-9fb0-42ae-92e5-f92c51b2a4d3"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{codigoempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="fc937a42-323f-4b35-8ae4-ebcb6ec6f9a2" x="633" y="0" width="100" height="14"/>
+				<reportElement x="633" y="0" width="100" height="14" uuid="fc937a42-323f-4b35-8ae4-ebcb6ec6f9a2"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Fecha}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="9bfb853c-e605-4fcb-8ba7-8cff28ec642f" x="135" y="1" width="100" height="14"/>
+				<reportElement x="135" y="1" width="100" height="14" uuid="9bfb853c-e605-4fcb-8ba7-8cff28ec642f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Empleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="c8e313ba-e915-4a2c-9a55-426b8a9941f0" x="373" y="1" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="373" y="1" width="100" height="20" uuid="c8e313ba-e915-4a2c-9a55-426b8a9941f0"/>
 				<textFieldExpression><![CDATA[$F{centroeducativo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="b4b01370-b5ad-4b90-ae3c-aa0acb906f28" x="476" y="2" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="476" y="2" width="100" height="20" uuid="b4b01370-b5ad-4b90-ae3c-aa0acb906f28"/>
 				<textFieldExpression><![CDATA[$F{duiempleado}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -266,14 +264,14 @@ inner join puesto p on ep.codigopuesto=p.codigopuesto where p.nombrepuesto like 
 	<pageFooter>
 		<band height="38" splitType="Stretch">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement uuid="b856798b-9afa-4b82-bd7c-d0facbdf6ce1" mode="Opaque" x="665" y="25" width="132" height="13" backcolor="#FFFFFF"/>
+				<reportElement mode="Opaque" x="665" y="25" width="132" height="13" backcolor="#FFFFFF" uuid="b856798b-9afa-4b82-bd7c-d0facbdf6ce1"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement uuid="cc747cd4-ac7f-4c29-a6d2-a3d691052864" x="1" y="14" width="785" height="2"/>
+				<reportElement x="1" y="14" width="785" height="2" uuid="cc747cd4-ac7f-4c29-a6d2-a3d691052864"/>
 			</line>
 		</band>
 	</pageFooter>
