--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_costocapacitacion.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_costocapacitacion.jrxml
@@ -9,7 +9,7 @@
 	<parameter name="IMAGE_PATH" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
-	<queryString language="SQL">
+	<queryString>
 		<![CDATA[SELECT  co.`numeropersona` as 'Cantidad de Personas',c.nombrecapacitacion as 'Tema',co.`costopersona` as'Costo por Persomna', (`costocapacitador`+(`numeropersona`*`costopersona`)) as 'Costo Total'
 FROM `costocapacitacion`co,capacitacion c
 WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
@@ -37,115 +37,115 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 		<band/>
 	</background>
 	<title>
-		<band height="138">
+		<band height="114">
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="e18cd85d-d4a0-4b0a-ba54-4b0e4647c6d2" x="135" y="91" width="70" height="20"/>
+				<reportElement x="135" y="91" width="70" height="20" uuid="e18cd85d-d4a0-4b0a-ba54-4b0e4647c6d2"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="221c8061-dfdf-4ba4-9dc3-db7f4c74c27e" x="150" y="79" width="265" height="20"/>
+				<reportElement x="150" y="79" width="265" height="20" uuid="221c8061-dfdf-4ba4-9dc3-db7f4c74c27e"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Reporte de Costos de Capacitación]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="8ba403ce-a35c-4d69-a99f-53bef029265c" x="350" y="91" width="74" height="20"/>
+				<reportElement x="350" y="91" width="74" height="20" uuid="8ba403ce-a35c-4d69-a99f-53bef029265c"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="ccce83d5-fb3d-41f8-b7cf-d7a6f6fdca54" x="425" y="91" width="26" height="20"/>
+				<reportElement x="425" y="91" width="26" height="20" uuid="ccce83d5-fb3d-41f8-b7cf-d7a6f6fdca54"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="cfc5a73e-6906-4dbd-bc16-465accdd2249" x="71" y="91" width="114" height="20"/>
+				<reportElement x="71" y="91" width="114" height="20" uuid="cfc5a73e-6906-4dbd-bc16-465accdd2249"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="bd456708-2f4e-4a2f-b69d-8e7d3d8e155c" x="211" y="91" width="39" height="20"/>
+				<reportElement x="211" y="91" width="39" height="20" uuid="bd456708-2f4e-4a2f-b69d-8e7d3d8e155c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="6b9e8986-0ad7-4cd5-8129-84bc2a08de4e" x="240" y="91" width="86" height="20"/>
+				<reportElement x="240" y="91" width="77" height="20" uuid="6b9e8986-0ad7-4cd5-8129-84bc2a08de4e"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement uuid="86c863d8-1b25-490a-9fac-1d11993b8ec3" x="376" y="9" width="90" height="70"/>
+				<reportElement x="376" y="9" width="90" height="70" uuid="86c863d8-1b25-490a-9fac-1d11993b8ec3"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement uuid="f7426a05-f716-4d95-8402-b221717bdf24" x="53" y="10" width="140" height="80"/>
+				<reportElement x="53" y="10" width="140" height="80" uuid="f7426a05-f716-4d95-8402-b221717bdf24"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement uuid="e56a3cb1-566c-4fd4-8a1f-8a91b0eacb94" x="320" y="91" width="100" height="20"/>
+				<reportElement x="320" y="91" width="60" height="20" uuid="e56a3cb1-566c-4fd4-8a1f-8a91b0eacb94"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="cc467778-d73d-44df-8e9e-036a7189d624" x="377" y="79" width="39" height="20"/>
+				<reportElement x="377" y="79" width="39" height="20" uuid="cc467778-d73d-44df-8e9e-036a7189d624"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="d6e51252-3e7d-4615-aa6f-8b1e7074292a" x="293" y="91" width="39" height="20"/>
+				<reportElement x="293" y="91" width="39" height="20" uuid="d6e51252-3e7d-4615-aa6f-8b1e7074292a"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="fccdba09-8dbd-4208-8d26-49781480ec28" x="474" y="39" width="100" height="20"/>
+				<reportElement x="474" y="39" width="100" height="20" uuid="fccdba09-8dbd-4208-8d26-49781480ec28"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="adfd7f11-a5c8-433b-b3f1-a32d7c90ee33" x="73" y="78" width="76" height="21"/>
+				<reportElement x="73" y="78" width="76" height="21" uuid="adfd7f11-a5c8-433b-b3f1-a32d7c90ee33"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[pnt_reporte_ccap]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="56e17a29-1b6f-4def-aba7-7bf728a445ed" x="146" y="18" width="265" height="20"/>
+				<reportElement x="146" y="18" width="265" height="20" uuid="56e17a29-1b6f-4def-aba7-7bf728a445ed"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Ministerio de Justicia y Seguridad Pública]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="997e1e06-7387-48b9-b0ca-ebe7808fd603" x="146" y="38" width="265" height="20"/>
+				<reportElement x="146" y="38" width="265" height="20" uuid="997e1e06-7387-48b9-b0ca-ebe7808fd603"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Dirección de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="32692b05-992a-4d77-9394-cea3b6215c2e" x="146" y="58" width="265" height="20"/>
+				<reportElement x="146" y="58" width="265" height="20" uuid="32692b05-992a-4d77-9394-cea3b6215c2e"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
@@ -159,40 +159,40 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 	<columnHeader>
 		<band height="14">
 			<rectangle>
-				<reportElement uuid="485b08c9-d043-48f5-9407-cea177e8f7f8" x="69" y="0" width="396" height="14" backcolor="#FFFFFF"/>
+				<reportElement x="69" y="0" width="396" height="14" backcolor="#FFFFFF" uuid="485b08c9-d043-48f5-9407-cea177e8f7f8"/>
 			</rectangle>
 			<staticText>
-				<reportElement uuid="6e8d1fb5-782e-4959-b128-fe72caa411fc" mode="Transparent" x="69" y="0" width="55" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement mode="Transparent" x="69" y="0" width="55" height="14" forecolor="#000000" backcolor="#E6E6E6" uuid="6e8d1fb5-782e-4959-b128-fe72caa411fc"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nº  Personas]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="d7150423-edf8-4a88-a50a-33666c6f26d6" mode="Transparent" x="126" y="0" width="167" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement mode="Transparent" x="126" y="0" width="167" height="14" forecolor="#000000" backcolor="#E6E6E6" uuid="d7150423-edf8-4a88-a50a-33666c6f26d6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tema]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="3a2220b7-0367-4a79-99d1-35ea6c6bcbab" mode="Transparent" x="305" y="0" width="76" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement mode="Transparent" x="305" y="0" width="76" height="14" forecolor="#000000" backcolor="#E6E6E6" uuid="3a2220b7-0367-4a79-99d1-35ea6c6bcbab"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Costo Persona($)]]></text>
 			</staticText>
 			<line direction="BottomUp">
-				<reportElement uuid="8cb3bb67-a42c-458e-ae3c-5de613a283b2" x="125" y="0" width="1" height="14"/>
+				<reportElement x="125" y="0" width="1" height="14" uuid="8cb3bb67-a42c-458e-ae3c-5de613a283b2"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement uuid="a94f7940-e7c0-490a-92cb-302bad26441b" x="306" y="0" width="1" height="14"/>
+				<reportElement x="306" y="0" width="1" height="14" uuid="a94f7940-e7c0-490a-92cb-302bad26441b"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement uuid="a7cde06e-6841-475d-85f3-4628bb8c4b8b" x="381" y="0" width="1" height="14"/>
+				<reportElement x="381" y="0" width="1" height="14" uuid="a7cde06e-6841-475d-85f3-4628bb8c4b8b"/>
 			</line>
 			<staticText>
-				<reportElement uuid="b6ead696-335c-474a-85ff-2cb3431470c8" mode="Transparent" x="382" y="0" width="84" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement mode="Transparent" x="382" y="0" width="84" height="14" forecolor="#000000" backcolor="#E6E6E6" uuid="b6ead696-335c-474a-85ff-2cb3431470c8"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
@@ -203,28 +203,28 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 	<detail>
 		<band height="14">
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="47f560f6-eb79-4d89-bc61-39ad78b9c149" mode="Transparent" x="71" y="0" width="53" height="14" forecolor="#000000"/>
+				<reportElement mode="Transparent" x="71" y="0" width="53" height="14" forecolor="#000000" uuid="47f560f6-eb79-4d89-bc61-39ad78b9c149"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Cantidad de Personas}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="4c370320-c883-447f-8ca7-cb444ec7f196" mode="Transparent" x="143" y="0" width="162" height="14" forecolor="#000000"/>
+				<reportElement mode="Transparent" x="143" y="0" width="162" height="14" forecolor="#000000" uuid="4c370320-c883-447f-8ca7-cb444ec7f196"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Tema}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="#,##0.00">
-				<reportElement uuid="f8b7f725-21d8-4bf4-ae95-d3790a672ac4" mode="Transparent" x="307" y="0" width="73" height="14" forecolor="#000000"/>
+				<reportElement mode="Transparent" x="307" y="0" width="73" height="14" forecolor="#000000" uuid="f8b7f725-21d8-4bf4-ae95-d3790a672ac4"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Costo por Persomna}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="#,##0.00">
-				<reportElement uuid="144ced2e-0cbd-42f0-a2d2-de110da3aa9a" mode="Transparent" x="386" y="0" width="76" height="14" forecolor="#000000"/>
+				<reportElement mode="Transparent" x="386" y="0" width="76" height="14" forecolor="#000000" uuid="144ced2e-0cbd-42f0-a2d2-de110da3aa9a"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -238,42 +238,42 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 	<summary>
 		<band height="37">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement uuid="81777815-467e-41ee-92d9-16f96509fa41" mode="Opaque" x="240" y="20" width="222" height="13" backcolor="#FFFFFF"/>
+				<reportElement mode="Opaque" x="240" y="20" width="222" height="13" backcolor="#FFFFFF" uuid="81777815-467e-41ee-92d9-16f96509fa41"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00">
-				<reportElement uuid="55f7c82f-04b8-4057-90ac-b49d32e67d27" x="317" y="0" width="61" height="20"/>
+				<reportElement x="317" y="0" width="61" height="20" uuid="55f7c82f-04b8-4057-90ac-b49d32e67d27"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{Costo por Persomna_3}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00">
-				<reportElement uuid="828d92b8-b62e-4883-8c2b-1bf065840689" x="386" y="0" width="76" height="20"/>
+				<reportElement x="386" y="0" width="76" height="20" uuid="828d92b8-b62e-4883-8c2b-1bf065840689"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{Costo Total_1}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="1ad602ce-196c-4d99-bb21-b5c31c09f2f9" x="69" y="0" width="55" height="32"/>
+				<reportElement x="69" y="0" width="55" height="32" uuid="1ad602ce-196c-4d99-bb21-b5c31c09f2f9"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total :" + $V{Cantidad de Personas_1}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="cde1c9d6-5519-4189-8c3c-80230d454535" x="337" y="0" width="15" height="19"/>
+				<reportElement x="337" y="0" width="15" height="19" uuid="cde1c9d6-5519-4189-8c3c-80230d454535"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[$]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="ab390105-004e-44c2-bd41-133b1020cf13" x="413" y="0" width="15" height="20"/>
+				<reportElement x="413" y="0" width="15" height="20" uuid="ab390105-004e-44c2-bd41-133b1020cf13"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
